<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sms"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="com.example.mycompany.mytracker.SMSActivity">
    <include layout="@layout/toolbar" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/messageIdText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp"
            android:text="@string/message"
            android:textSize="15sp"/>
        <ImageView
            android:id="@+id/ligneSms"
            android:layout_below="@id/messageIdText"
            android:src="@android:drawable/divider_horizontal_textfield"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:paddingBottom="2dp"
            android:paddingTop="2dp"
            android:layout_marginTop="10dp"
            android:color="#ffffff"
            android:contentDescription="@string/nulll"
            />
        <EditText
            android:id="@+id/smsText"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_below="@id/ligneSms"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="10dp"
            android:inputType="text"
            />
        <Button
            android:id="@+id/sendButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/secondaryColor"
            android:textColor="@color/white"
            android:text="@string/send"/>


    </RelativeLayout>


</LinearLayout>
